--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,9 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.12.9
   - pip=25.0
+  - python=3.12.9
   - pip:
       - black==25.1.0
+      - numpy==2.2.5
+      - typeguard==4.4.2
