--- a/environment.yml
+++ b/environment.yml
@@ -7,5 +7,8 @@ dependencies:
   - python=3.12.9
   - pip:
       - black==25.1.0
+      - matplotlib==3.10.1
       - numpy==2.2.5
+      - seaborn==0.13.2
+      - tqdm==4.67.1
       - typeguard==4.4.2
