--- a/environment.yml
+++ b/environment.yml
@@ -7,8 +7,10 @@ dependencies:
   - python=3.12.9
   - pip:
       - black==25.1.0
+      - coloredlogs==15.0.1
       - matplotlib==3.10.1
       - numpy==2.2.5
+      - scipy==1.15.2
       - seaborn==0.13.2
       - tqdm==4.67.1
       - typeguard==4.4.2
