(chore): Update environment, now it has ydata-profiling, pandas and mpld3.

--- a/environment.yml
+++ b/environment.yml
@@ -9,8 +9,11 @@ dependencies:
       - black==25.1.0
       - coloredlogs==15.0.1
       - matplotlib==3.10.1
+      - mpld3==0.5.10
       - numpy==2.2.5
+      - pandas==2.2.3
       - scipy==1.15.2
       - seaborn==0.13.2
       - tqdm==4.67.1
       - typeguard==4.4.2
+      - ydata-profiling==4.16.1
