--- a/environment.yml
+++ b/environment.yml
@@ -5,11 +5,13 @@ channels:
 dependencies:
   - pip=25.0
   - python=3.12.9
+  - jupyterlab=4.4.2
   - pip:
       - black==25.1.0
       - coloredlogs==15.0.1
       - matplotlib==3.10.1
       - mpld3==0.5.10
+      - notebook==7.4.2
       - numpy==2.2.5
       - pandas==2.2.3
       - scipy==1.15.2
