--- a/environment.yml
+++ b/environment.yml
@@ -5,16 +5,17 @@ channels:
 dependencies:
   - pip=25.0
   - python=3.12.9
-  - jupyterlab=4.4.2
+  - jupyterlab=4.4.3
   - pip:
       - black==25.1.0
       - coloredlogs==15.0.1
       - matplotlib==3.10.1
       - mpld3==0.5.10
       - notebook==7.4.2
-      - numpy==2.2.5
+      - numpy==2.2.6
       - pandas==2.2.3
-      - scipy==1.15.2
+      - scikit-image==0.25.2
+      - scipy==1.15.3
       - seaborn==0.13.2
       - tqdm==4.67.1
       - typeguard==4.4.2
