--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
       - notebook==7.4.2
       - numpy==2.2.6
       - pandas==2.2.3
+      - pydub==0.25.1
       - scikit-image==0.25.2
       - scipy==1.15.3
       - seaborn==0.13.2
